--- a/main.tex
+++ b/main.tex
@@ -537,13 +537,11 @@ The example in \Cref{tab:hex_example} shows hexadecimal coding for a job contain
   \label{tab:hex_example}
 \end{table}
 
-
 \subsubsection{Similarity}
 Determining the resemblance between two jobs is the main task of this work.
 Clustering algorithms need a distance metrics to allow organizing them together.
 There are various variants, a selection is listed in \Cref{tab:sim_funcs}.
-The Manhatten distance for two vectors is defines as $\sum_i |a_i - b_i|$ and can naturally only be applied to
- vectors of the same length.
+The Euclidean distance for two vectors is defines as $\sum_i |a_i - b_i|$ and can naturally only be applied to vectors of the same length.
 The Levensthein distance is the number of modifications (inserts, deletes, changes) of individual characters that need to be made to transform one string to another.
 To create a flexible similarity function, we combine the Manhatten distance with a sliding window or phase detection to allow it to determine a distance between two vectors of different length.
 
@@ -898,7 +896,7 @@ If not, the clustering algorithm is not effective.
 
 \subsection{Description of our data set}
 
-This section describes the job data extracted from Mistral, originally we gathered 1\,million jobs from a period of \jk{12 months?}.
+This section describes the job data extracted from Mistral, originally we gathered 1\,million jobs from a period of 203 days.
 Mostly jobs are allowed to run up to 8-hours, leading to time series with up to 48 segments.
 From the perspective of this work, analysis of non-I/O-intensive jobs (jobs with zero in all segments) is irrelevant, these jobs can be grouped into one class easily.
 For that reason, we detect zero-jobs early and remove them from the dataset; these are about 40\% of jobs.
